Adding the delete action

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myApplication">
+<html ng-app="myApplication" ng-controller="myCtrl">
 <head>
 	<title>{{ title }}</title>
 
@@ -7,7 +7,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.min.js"></script>
 	<script src="js/app.js"></script>
 </head>
-<body ng-controller="myCtrl">
+<body>
 	<h1>{{ title }}</h1>
 
 	<table border="1">
